--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -3,18 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Detail</title>
+    <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    {% load staticfiles %}
+    <link rel="stylesheet" type="text/css" href="{% static 'polls/bootstrap.min.css' %}"/>
 </head>
 <body>
-<h1>{{ question.question_text }}</h1>
-<h2>{{ question.pub_date }}</h2>
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-<form action="{% url 'polls:vote' question.id %}" method="post">
-{% csrf_token %}
-{% for choice in question.choice_set.all %}
-    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
-    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br />
-{% endfor %}
-<input type="submit" value="Vote" />
-</form>
+<div class="container">
+    <h1>{{ question.question_text }}</h1>
+
+    <h2>{{ question.pub_date }}</h2>
+    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+    <form role="form" action="{% url 'polls:vote' question.id %}" method="post">
+        {% csrf_token %}
+        {% for choice in question.choice_set.all %}
+            <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}"/>
+            <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br/>
+        {% endfor %}
+        <input type="submit" value="Vote"/>
+    </form>
+</div>
 </body>
 </html>
