--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -14,13 +14,19 @@
 
     <h2>{{ question.pub_date }}</h2>
     {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-    <form role="form" action="{% url 'polls:vote' question.id %}" method="post">
+    <form role="form" class="form-horizontal" action="{% url 'polls:vote' question.id %}" method="post">
         {% csrf_token %}
-        {% for choice in question.choice_set.all %}
-            <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}"/>
-            <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br/>
-        {% endfor %}
-        <input type="submit" value="Vote"/>
+        <div class="form-group">
+            {% for choice in question.choice_set.all %}
+                <div class="col-md-1">
+                        <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}"/>
+                </div>
+                <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br/>
+            {% endfor %}
+        </div>
+        <div class="form-group">
+            <input type="submit" value="Vote"/>
+        </div>
     </form>
 </div>
 </body>
