--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -18,10 +18,14 @@
         {% csrf_token %}
         <div class="form-group">
             {% for choice in question.choice_set.all %}
-                <div class="col-md-1">
+                <div class="row">
+                    <div class="col-md-1">
                         <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}"/>
+                    </div>
+                    <div class="col-md-5">
+                        <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br/>
+                    </div>
                 </div>
-                <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br/>
             {% endfor %}
         </div>
         <div class="form-group">
