--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     {% load staticfiles %}
-    <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'polls/css/style.css' %}"/>
     <title>Title</title>
 </head>
 <body>
