--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     {% load staticfiles %}
-    <link rel="stylesheet" type="text/css" href="{% static 'polls/bootstrap.min.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'polls/css/bootstrap.min.css' %}"/>
 </head>
 <body>
 <div class="container">
     <h1>{{ question.question_text }}</h1>
 
     <h2>{{ question.pub_date }}</h2>
-    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+    {% if error_message %}<p class="text-danger"><strong>{{ error_message }}</strong></p>{% endif %}
     <form role="form" class="form-horizontal" action="{% url 'polls:vote' question.id %}" method="post">
         {% csrf_token %}
         <div class="form-group">
@@ -29,7 +29,7 @@
             {% endfor %}
         </div>
         <div class="form-group">
-            <input type="submit" value="Vote"/>
+            <input class="btn btn-primary" type="submit" value="Vote"/>
         </div>
     </form>
 </div>
